syntax = "proto3";

package frontend_base_service;

import "google/protobuf/empty.proto";

service Route {
    rpc GetRoute (google.protobuf.Empty) returns (JsonReply);
}

service I18n {
    rpc GetI18n (I18nRequest) returns (JsonReply);
}

message I18nRequest {
    string lang = 1;
}

message JsonReply {
    string result = 1;
}
